# weedy_ros

./: .gitignore  README.md  convert_bag.py
bag_data/arcs/: metadata.yaml
bag_data/arcs_2/: metadata.yaml
bag_data/arcs_2_csv/: cmd.csv  cmd_vel.csv  diagnostics.csv  imu_data.csv  mag_data.csv  mag_quat.csv  odom.csv  odometry_filtered.csv  path.csv  pose.csv  position.csv  reset_odom.csv  rosout.csv  tf.csv  ticks.csv
bag_data/arcs_csv/: cmd.csv  cmd_vel.csv  diagnostics.csv  imu_data.csv  mag_data.csv  mag_quat.csv  odom.csv  odometry_filtered.csv  path.csv  pose.csv  position.csv  reset_odom.csv  rosout.csv  tf.csv  ticks.csv
bag_data/double_pass/: metadata.yaml
bag_data/double_pass_2/: metadata.yaml
bag_data/double_pass_2_csv/: cmd.csv  cmd_vel.csv  diagnostics.csv  imu_data.csv  mag_data.csv  mag_quat.csv  odom.csv  odometry_filtered.csv  path.csv  pose.csv  position.csv  reset_odom.csv  rosout.csv  tf.csv  ticks.csv
bag_data/double_pass_csv/: battery.csv  cmd.csv  cmd_vel.csv  diagnostics.csv  imu_data.csv  mag_data.csv  mag_quat.csv  odom.csv  odometry_filtered.csv  parameter_events.csv  (+8 more)
install/: local_setup.sh  setup.sh
log/: latest_build
my_bag/: metadata.yaml  my_bag_0.mcap
my_bag_csv/: cmd.csv  cmd_vel.csv  ctr_cmd.csv  diagnostics.csv  imu_data.csv  mag_data.csv  mag_quat.csv  odom.csv  odometry_filtered.csv  path.csv  pose.csv  position.csv  rosout.csv  tf.csv  ticks.csv
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: CartesianMsg.msg  Inference.msg  Keypoint.msg  KeypointSet.msg
utils/: package.xml  setup.py
(+248 files in other folders)
